# sicpi

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  autoexec.bat  devcontainer.json
app_tests/ch1/: 1_1_1.sicp  1_1_2.sicp  1_1_3.sicp  1_1_4.sicp  1_1_6.sicp  1_1_7.sicp
app_tests/ch1/ex1.01/: ex1.01--question.sicp
app_tests/ch1/ex1.03/: ex1.03-cbf.sicp
app_tests/data/book/ch1/: 1.1.1-body.sicp  1.1.1-body.sicp.approved  1.1.2-body.sicp.approved  1.1.4-body.sicp.approved  1.1.6-body.sicp.approved  1.1.6-ex1.01.sicp  1.1.6-ex1.01.sicp.approved  1.1.6-ex1.02.sicp.approved  1.1.6-ex1.04.sicp.approved  1.1.6-ex1.05.sicp.approved  1.1.7-body.sicp.approved  1.1.7-ex1.06.sicp.approved  1.1.8-body.sicp.approved  1.2.1-body.sicp  1.2.1-body.sicp.approved  1.2.1-ex1.09.sicp.approved  1.2.1-ex1.10.sicp.approved  1.2.2-body.sicp.approved  1.2.3-ex1.15.sicp.approved  1.2.4-body.sicp.approved  1.2.4-ex1.17.sicp  1.2.4-ex1.17.sicp.approved  1.2.5-body.sicp.approved  1.2.6-body.sicp.approved  1.2.6-ex1.22.sicp  1.2.6-ex1.22.sicp.approved  1.2.6-ex1.25.sicp.approved  1.2.6-ex1.26.sicp.approved  1.3.0-body.sicp.approved  1.3.1-body.sicp.approved  1.3.2-body.sicp  1.3.2-body.sicp.approved  1.3.2-ex1.34.sicp  1.3.2-ex1.34.sicp.approved  1.3.3-body.sicp.approved  1.3.4-body.sicp  1.3.4-body.sicp.approved
app_tests/scripts/: approve.sh  proto.sh
code/book/ch1/: 1.1.3.sicp  1.1.4-body.sicp  1.1.7.sicp  1.2.1-ex1.09.sicp  1.2.4-body.sicp  1.2.6-ex1.22.sicp  1.3.1-body.sicp
code/solutions/ch1/ex1.07/: ex1.07-cbf.sicp
code/solutions/ch1/ex1.08/: ex1.08-cbf.sicp
code/solutions/ch1/ex1.16/: ex1.16-cbf.sicp
code/solutions/ch1/ex1.18/: ex1.18-cbf.sicp
code/solutions/ch1/ex1.19/: ex1.19-cbf.sicp
code/solutions/ch1/ex1.22/: ex1.22-cbf.sicp
code/solutions/ch1/ex1.23/: ex1.23-cbf.sicp
code/solutions/ch1/ex1.24/: ex1.24-cbf.sicp
code/solutions/ch1/ex1.25/: ex1.25-cbf.sicp
code/solutions/ch1/ex1.27/: ex1.27-cbf.sicp
code/solutions/ch1/ex1.29/: ex1.29-cbf.sicp
code/solutions/ch1/ex1.33/: ex1.33-cbf.sicp
docs/r4rs/: scheme-standard-r4rs-link.txt
references/: explicit-control-evaluator.rkt
scheme-code/book/ch1/: 1.1.2-body.sicp  1.1.6-ex1.02.sicp  1.1.7-ex1.06.sicp  1.1.8-body.sicp  1.2.1-ex1.10.sicp  1.2.2-body.sicp  1.2.3-ex1.15.sicp  1.2.5-body.sicp  1.2.6-body.sicp  1.2.6-ex1.25.sicp  1.2.6-ex1.26.sicp  1.3.0-body.sicp  1.3.2-ex1.34.sicp  1.3.3-body.sicp
scheme-code/solutions/ch1/ex1.11/: ex1.11-cbf.sicp
scheme-code/solutions/ch1/ex1.12/: ex1.12-cbf.sicp
scheme-code/solutions/ch1/ex1.17/: ex1.17-cbf.sicp
scheme-code/solutions/ch1/ex1.21/: ex1.21-cbf.sicp
spec/: explicit-control-evaluator.rkt
src/: args.c  args.h  character-classes.c  character-classes.h  dialect.c  dialect.h  explicit-control-evaluator.c  explicit-control-evaluator.h  hardware.c  hardware.h  hello.c  input_port.c  input_port.h  lexer.c  lexer.h  list.c  list.h  metacircular-procedures.c  metacircular-procedures.h  notices.h  obarray.c  obarray.h  object.c  object.h  parser.c  parser.h  primitive-procedures.c  primitive-procedures.h  run.c  run.h  sicp-error.c  sicp-error.h  sicp-std.c  sicp-std.h  sicp.c  sicpstd.c  sicpstd.h  source.c  source.h  string-builder.c  (+8 more)
tests/: CMakeLists.txt  test-eceval.c  test-explicit-control-evaluator.c  test-lexer.c  test-list.c  test-obarray.c  test-object.c  test-parser.c  test-primitive-procedures.c  test-sicp-version.c  test-source.c  test-source.h  test-string-builder.c  test-string-builder.h  test-table-token-source.c  test-token-table.c  test-token-table.h  test.c
tests/stuff/: test-lexer.txt
wasm/: build.sh
(+52 files in other folders)
